syntax = "proto3";

// Пакет определяет пространство имен.
// В Rust это превратится в mod log_collector
package log_collector;

import "google/protobuf/timestamp.proto";

// Импортируем стандартный тип времени Google.
// Это гораздо лучше, чем передавать время строкой, так как хранит (секунды, наносекунды).

// -------------------------------------------------------------------
// Определение Сервиса
// -------------------------------------------------------------------
service LogCollector {
    // Метод приема логов.
    // Ключевое слово 'stream' означает, что мы готовы принять
    // не один лог, а открытый поток данных от клиента.
    rpc SendLogs (stream LogEntry) returns (LogResponse);
}

// -------------------------------------------------------------------
// Сообщения
// -------------------------------------------------------------------

// Ваша структура лога
message LogEntry {
    // Соответствует: pub timestamp: OffsetDateTime
    google.protobuf.Timestamp timestamp = 1;

    // Соответствует: pub level: String
    string level = 2;

    // Соответствует: pub service: String
    string service = 3;

    // Соответствует: pub message: String
    string message = 4;
}

// Ответ сервера после завершения приема потока
message LogResponse {
    // Успешно ли прошла операция
    bool success = 1;

    // Сообщение об ошибке (если success = false), опционально
    string error_message = 3;
}